--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>i</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: black;
             color: white;
             font-size: 120px;
-            font-family: 'Orbitron', monospace;
+            font-family: monospace;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -25,9 +22,6 @@
         #time {
             text-align: left;
             margin-bottom: 40px;
-            width: 8ch;
-            display: inline-block;
-            transform: translateX(12%);
         }
         #date {
             text-align: center;
