--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             margin: 0;
             padding: 0;
             text-align: center;
+            border: 2px solid lightblue;
+            box-sizing: border-box;
+            min-height: 100vh;
         }
         #time {
             margin: 40px 0;
